--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<html>
 
 <head>
   <title>DesEntso - Portfolio</title>
@@ -72,7 +71,7 @@
     <h3 class="projectName">Time zone bot for Reddit and Discord</h3>
 
     <div class="leftCont">
-      <img class="projectImg chart" src="E:\Käyttäjät\Tiedostot\Nettisivu\Portfolio_Website_New_Try\Images\timezonebotChart.png" alt="" />
+      <img class="projectImg chart" src="\Images\timezonebotChart.png" alt="" />
     </div>
 
     <div class="rightCont">
@@ -104,8 +103,8 @@
   <div class="project">
     <h3 class="projectName">Countle.com</h3>
     <div class="leftCont">
-      <img class="projectImg left" src="E:\Käyttäjät\Tiedostot\Nettisivu\Portfolio_Website_New_Try\Images\countle.png" alt="" />
-      <img class="projectImg" src="E:\Käyttäjät\Tiedostot\Nettisivu\Portfolio_Website_New_Try\Images\countle2.png">
+      <img class="projectImg left" src="\Images\countle.png" alt="" />
+      <img class="projectImg" src="\Images\countle2.png">
     </div>
 
     <div class="rightCont">
@@ -135,7 +134,7 @@
   <div class="project">
     <h3 class="projectName">JavaScript Game</h3>
     <div class="leftCont">
-      <img class="projectImg chart" id="jsGamePic" src="E:\Käyttäjät\Tiedostot\Nettisivu\Portfolio_Website_New_Try\Images\jsGame.png" alt="" />
+      <img class="projectImg chart" id="jsGamePic" src="\Images\jsGame.png" alt="" />
     </div>
 
     <div class="rightCont">
@@ -148,7 +147,7 @@
       <p class="desc right">The game is created with pure Javascript. It is inspired by a popular mobile game called "BBTAN". The game is never-ending. Your goal is to clear the boxes and not let them hit the bottom. The boxes have hit points, when you hit a box with a ball the hit points go down by one, the box disappears when its hit points go to zero. You start with one ball, but can get more balls by hitting the little balls with a plus sign. When all balls have exited through the bottom a new round starts. At the start of a new round, a new row of boxes appears. As the game goes on the new round of boxes gets more hit points. You score a point when you survive one round.
         <br>
         <br>
-        You can play the game here: <a href="E:/K%C3%A4ytt%C3%A4j%C3%A4t/Tiedostot/Nettisivu/Portfolio_Website_New_Try/jsGame.html" class="link">https://www.myportfolio.com/jsgame</a>
+        You can play the game here: <a href="\jsGame.html" class="link">https://www.myportfolio.com/jsgame</a>
       </p>
       <br />
       <h3 class="descTitle right">Challenges</h3>
@@ -160,8 +159,8 @@
   <div class="project">
     <h3 class="projectName">Fovents.com</h3>
     <div class="leftCont">
-      <img class="projectImg left" src="E:\Käyttäjät\Tiedostot\Nettisivu\Portfolio_Website_New_Try\Images\fovents.png" alt="" />
-      <img class="projectImg" src="E:\Käyttäjät\Tiedostot\Nettisivu\Portfolio_Website_New_Try\Images\fovents2.png">
+      <img class="projectImg left" src="\Images\fovents.png" alt="" />
+      <img class="projectImg" src="\Images\fovents2.png">
     </div>
 
     <div class="rightCont">
@@ -188,8 +187,8 @@
   <div class="project">
     <h3 class="projectName">UnitedLoL</h3>
     <div class="leftCont">
-      <img class="projectImg left" src="E:\Käyttäjät\Tiedostot\Nettisivu\Portfolio_Website_New_Try\Images\unitedLol.png" alt="" />
-      <img class="projectImg" src="E:\Käyttäjät\Tiedostot\Nettisivu\Portfolio_Website_New_Try\Images\unitedLol2.png">
+      <img class="projectImg left" src="\Images\unitedLol.png" alt="" />
+      <img class="projectImg" src="\Images\unitedLol2.png">
     </div>
 
     <div class="rightCont">
@@ -217,7 +216,7 @@
   <div class="project">
     <h3 class="projectName">BlackJack</h3>
     <div class="leftCont">
-      <img class="projectImg left" src="E:\Käyttäjät\Tiedostot\Nettisivu\Portfolio_Website_New_Try\Images\blackjack.png" alt="" />
+      <img class="projectImg left" src="\Images\blackjack.png" alt="" />
     </div>
 
     <div class="rightCont">
@@ -245,37 +244,37 @@
 
       <a href="https://codepen.io/Desentso/full/JdvQza/"><div class="smallProject">
         <h4 class="smallPTitle">Egg Timer</h4>
-        <img src="E:\Käyttäjät\Tiedostot\Nettisivu\Portfolio_Website_New_Try\Images\eggtimer.png" class="smallImg">
+        <img src="\Images\eggtimer.png" class="smallImg">
       </div></a>
 
       <a href="https://codepen.io/Desentso/full/mJKzXM/"><div class="smallProject">
         <h4 class="smallPTitle">Calculator</h4>
-        <img src="E:\Käyttäjät\Tiedostot\Nettisivu\Portfolio_Website_New_Try\Images\calc.png" class="smallImg">
+        <img src="\Images\calc.png" class="smallImg">
       </div></a>
 
       <a href="https://codepen.io/Desentso/full/pJVOMQ/"><div class="smallProject">
         <h4 class="smallPTitle">Wikipedia Searcher</h4>
-        <img src="E:\Käyttäjät\Tiedostot\Nettisivu\Portfolio_Website_New_Try\Images\wpSearcher.png" class="smallImg">
+        <img src="\Images\wpSearcher.png" class="smallImg">
       </div></a>
 
       <a href="https://codepen.io/Desentso/full/wgwgKQ/"><div class="smallProject">
         <h4 class="smallPTitle">Firework Animation</h4>
-        <img src="E:\Käyttäjät\Tiedostot\Nettisivu\Portfolio_Website_New_Try\Images\firework.png" class="smallImg">
+        <img src="\Images\firework.png" class="smallImg">
       </div></a>
 
       <a href="https://codepen.io/Desentso/full/jWqZPO/"><div class="smallProject">
         <h4 class="smallPTitle">BlackJack</h4>
-        <img src="E:\Käyttäjät\Tiedostot\Nettisivu\Portfolio_Website_New_Try\Images\blackjackJS.png" class="smallImg">
+        <img src="\Images\blackjackJS.png" class="smallImg">
       </div></a>
 
       <a href="https://codepen.io/Desentso/full/NbpQOL/"><div class="smallProject">
         <h4 class="smallPTitle">Ball Bounce Animation</h4>
-        <img src="E:\Käyttäjät\Tiedostot\Nettisivu\Portfolio_Website_New_Try\Images\ballbounce.png" class="smallImg">
+        <img src="\Images\ballbounce.png" class="smallImg">
       </div></a>
 
       <a href="https://codepen.io/Desentso/full/PzxENP/"><div class="smallProject">
         <h4 class="smallPTitle">Grid UI</h4>
-        <img src="E:\Käyttäjät\Tiedostot\Nettisivu\Portfolio_Website_New_Try\Images\gridui.png" class="smallImg">
+        <img src="\Images\gridui.png" class="smallImg">
       </div></a>
 
 
@@ -286,14 +285,14 @@
       <a href="https://github.com/Desentso/TwitterBots">
         <div class="smallProject">
           <h4 class="smallPTitle">Twitter Scripts/Bots</h4>
-          <img src="E:\Käyttäjät\Tiedostot\Nettisivu\Portfolio_Website_New_Try\Images\eggt imer.png" class="smallImg">
+          <img src="\Images\eggt imer.png" class="smallImg">
         </div>
       </a>
 
       <a href="https://github.com/Desentso/WebScrapers">
         <div class="smallProject">
           <h4 class="smallPTitle">Web Scrapers</h4>
-          <img src="E:\Käyttäjät\Tiedostot\Nettisivu\Portfolio_Website_New_Try\Images\eggt imer.png" class="smallImg">
+          <img src="\Images\eggt imer.png" class="smallImg">
         </div>
       </a>
 
