--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
 
   <h2 class="secTitle">Contact</h2>
 
-  <form class="form" method="POST" action="http://formspree.io/desentsobusiness@gmail.com">
+  <form class="form" method="POST" action="https://formspree.io/desentsobusiness@gmail.com">
 
     <label class="label">Name</label>
     <input class="input" type="text" name="name" id="name">
