--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <title>DesEntso - Portfolio</title>
   <meta name="viewport" content="width=device-width">
-  <link href='https://fonts.googleapis.com/css?family=Ubuntu:400,500,700|Roboto+Slab:400,700|Roboto:400,500,700|Open+Sans' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
   <link href="index.css" rel="stylesheet" type="text/css">
   <script type="text/javascript" src="index.js"></script>
 </head>
