--- a/index.html
+++ b/index.html
@@ -177,8 +177,8 @@
       <p class="desc right">Fovents is a website for foodtrucks. Fovents uses many event API's and combines the relevant results. The user can search the events by their location, radius,  date and category. They can also move to a place on a map and search on a certain radius. The events are displayed on a map. The user can also save events for later retrieving. 
         <br><br>
         The backend is created with Python using the Flask framework. SQLite3 is used to store user information, like account data and saved events. The server and client communicates with an API. 
-      <br>
-        You can find the code from here <a href="https://github.com/Desentso/Fovents">https://github.com/Desentso/Fovents</a>
+      <br><br>
+        You can find the code from here <a class="link" href="https://github.com/Desentso/Fovents">https://github.com/Desentso/Fovents</a>
       </p>
       <br />
       <h3 class="descTitle right">Challenges</h3>
