--- a/index.html
+++ b/index.html
@@ -148,6 +148,9 @@
         <br>
         <br>
         You can play the game here: <a href="\jsGame.html" class="link">https://www.myportfolio.com/jsgame</a>
+        
+        <br><br>
+        You can find the code from Github <a href="https://github.com/Desentso/JavaScriptGame" class="link">https://github.com/Desentso/JavaScriptGame</a>
       </p>
       <br />
       <h3 class="descTitle right">Challenges</h3>
