--- a/index.html
+++ b/index.html
@@ -290,14 +290,14 @@
       <a href="https://github.com/Desentso/TwitterBots">
         <div class="smallProject">
           <h4 class="smallPTitle">Twitter Scripts/Bots</h4>
-          <img src="\Images\eggt imer.png" class="smallImg">
+          <img src="\Images\PythonLogo.png" class="smallImg">
         </div>
       </a>
 
       <a href="https://github.com/Desentso/WebScrapers">
         <div class="smallProject">
           <h4 class="smallPTitle">Web Scrapers</h4>
-          <img src="\Images\eggt imer.png" class="smallImg">
+          <img src="\Images\PythonLogo.png" class="smallImg">
         </div>
       </a>
 
