--- a/index.html
+++ b/index.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 
 <head>
-  <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-100547110-2"></script>
   <script>
-    (adsbygoogle = window.adsbygoogle || []).push({
-      google_ad_client: "ca-pub-3019569948023710",
-      enable_page_level_ads: true
-    });
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-100547110-2');
   </script>
+
   <title>DesEntso - Portfolio</title>
   <meta name="viewport" content="width=device-width">
   <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
@@ -36,7 +39,6 @@
     <h1 class="title">About</h1>
     <p class="aboutText">I'm a software developer from Finland. I develop full-stack web apps e.g Countle.com, scripts/bots e.g the Time zone bot, and games. I am going to study Computer Science in the Aalto University from 2018. In the future I would like to build a more complex full-stack web app and learn more about game development.</p>
     <p class="aboutTech">Languages I use</p>
-    <!--<p class="aboutTechLangs">HTML&CSS, JavaScript (JQuery and Node.js), Python, Flask (Python framework), Java</p>-->
     <p class="aboutTechLangs">
       <span class="abTechLang">JavaScript</span>
       <span class="abTechLang">Python</span>
@@ -58,14 +60,6 @@
     </div>
 
   </div>
-<!--
-  <h1 class="title">DesEntso</h1>
-  <p class="quote">"The only way to do great work is to love what you do." – Steve Jobs</p>
-  <div class="langs">
-    <h4 class="lang">WEB</h4>
-    <h4 class="lang">PYTHON</h4>
-    <h4 class="lang">JAVA</h4>
-  </div>-->
 
 </div>
 
