--- a/jsGame.html
+++ b/jsGame.html
@@ -1,5 +1,15 @@
 <html>
 <head>
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-100547110-2"></script>
+	<script>
+	  window.dataLayer = window.dataLayer || [];
+	  function gtag(){dataLayer.push(arguments);}
+	  gtag('js', new Date());
+
+	  gtag('config', 'UA-100547110-2');
+	</script>
+
 	<title>JavaScript Game</title>
 	<meta name="viewport" content="width=device-width">
 	<link href='https://fonts.googleapis.com/css?family=Ubuntu:400,500,700|Roboto+Slab:400,700|Roboto:400,500,700|Open+Sans' rel='stylesheet' type='text/css'>
