--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
       <p class="desc right">The game is created with pure Javascript. It is inspired by a popular mobile game called "BBTAN". The game is never-ending. Your goal is to clear the boxes and not let them hit the bottom. The boxes have hit points, when you hit a box with a ball the hit points go down by one, the box disappears when its hit points go to zero. You start with one ball, but can get more balls by hitting the little balls with a plus sign. When all balls have exited through the bottom a new round starts. At the start of a new round, a new row of boxes appears. As the game goes on the new round of boxes gets more hit points. You score a point when you survive one round.
         <br>
         <br>
-        You can play the game here: <a href="\jsGame.html" class="link">https://www.myportfolio.com/jsgame</a>
+        You can play the game here: <a href="\jsGame.html" class="link">https://desentso.github.io/jsGame.html</a>
         
         <br><br>
         You can find the code from Github <a href="https://github.com/Desentso/JavaScriptGame" class="link">https://github.com/Desentso/JavaScriptGame</a>
