--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
     <p class="aboutTechLangs">
       <span class="abTechLang">Node.js</span>
       <span class="abTechLang">Flask</span>
+      <span class="abTechLand">React.js</span>
       <span class="abTechLang">Regex</span>
       <span class="abTechLang">PostgreSQL</span>
     </p>
