--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
   <div class="about">
 
     <h1 class="title">About</h1>
-    <p class="aboutText">I'm a software developer from Finland. I develop full-stack web apps e.g Duunli.com, scripts/bots e.g the Time zone bot, and games. I am going to study Computer Science in the Aalto University from 2018. In the future I would like to build a more complex full-stack web app and learn more about game development.</p>
-    <p class="aboutTech">Languages I have used</p>
+    <p class="aboutText">I'm a software developer from Finland. I develop full-stack web apps e.g Duunli.com, scripts/bots e.g the Time zone bot, and games. I am studying Computer Science in the Aalto University. In the future I would like to build a more complex full-stack web app and learn more about game development.</p>
+    <p class="aboutTech">Languages I use</p>
     <p class="aboutTechLangs">
       <span class="abTechLang">JavaScript</span>
       <span class="abTechLang">Python</span>
@@ -46,7 +46,7 @@
       <span class="abTechLang">SQL</span>
       <span class="abTechLang">HTML&CSS</span>
     </p>
-    <p class="aboutTech">Libraries / Frameworks I have used</p>
+    <p class="aboutTech">Libraries / Frameworks I use</p>
     <p class="aboutTechLangs">
       <span class="abTechLang">React.js</span>
       <span class="abTechLang">Redux</span>
