Fix blockchain image paths

--- a/index.html
+++ b/index.html
@@ -115,8 +115,8 @@
     <h3 class="projectName">Blockchain</h3>
 
     <div class="leftCont">
-      <img class="projectImg" src="\Images\blockchain_wallet.png" alt="" />
-      <img class="projectImg" src="\Images\blockchain_explorer.png" alt="" />
+      <img class="projectImg" src="\Images\blockchain_wallet.PNG" alt="" />
+      <img class="projectImg" src="\Images\blockchain_explorer.PNG" alt="" />
     </div>
 
     <div class="rightCont">
