--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   <div class="about">
 
     <h1 class="title">About</h1>
-    <p class="aboutText">I'm a software developer from Finland. I develop full-stack web apps e.g Duunli.com, scripts/bots e.g the Time zone bot, and games. I am studying Computer Science in the Aalto University. In the future I would like to build a more complex full-stack web app and learn more about game development.</p>
+    <p class="aboutText">I'm a software engineer from Finland. I develop full-stack web apps e.g Duunli.com, scripts/bots e.g the Time zone bot, and games. I am also studying Computer Science at the Aalto University. In the future I would like to build a more complex full-stack web app and learn more about game development.</p>
     <p class="aboutTech">Languages I use</p>
     <p class="aboutTechLangs">
       <span class="abTechLang">JavaScript</span>
@@ -262,65 +262,6 @@
     </div>
   </div>
 
-  <!--<div class="project">
-    <h3 class="projectName">Fovents.com</h3>
-    <div class="leftCont">
-      <img class="projectImg left" src="\Images\fovents.png" alt="" />
-      <img class="projectImg" src="\Images\fovents2.png" />
-    </div>
-
-    <div class="rightCont">
-      <h3 class="descTitle right">Technologies Used</h3>
-      <div class="techBox">
-        <p class="tech">HTML & CSS</p>
-        <p class="tech">JavaScript</p>
-        <p class="tech">Python (Flask)</p>
-        <p class="tech">SQL (SQLite3)</p>
-        <p class="tech">Numerous APIs</p>
-      </div>
-      <br />
-      <h3 class="descTitle right">Overview</h3>
-      <p class="desc right">Fovents is a website for foodtrucks. Fovents uses many event API's and combines the relevant results. The user can search the events by their location, radius,  date and category. They can also move to a place on a map and search on a certain radius. The events are displayed on a map. The user can also save events for later retrieving. 
-        <br/><br/>
-        The backend is created with Python using the Flask framework. SQLite3 is used to store user information, like account data and saved events. The server and client communicates with an API. 
-        <br/><br/>
-        You can find the code from here <a class="link" href="https://github.com/Desentso/Fovents">https://github.com/Desentso/Fovents</a>
-      </p>
-      <br />
-      <h3 class="descTitle right">Challenges</h3>
-      <p class="desc right">It was my first time creating a full-stack app. Basically everything from client-server communicating to user information storing was new. It was definitely one of the most challenging projects, but also very teaching.</p>
-    </div>
-  </div>
-
-  <div class="project">
-    <h3 class="projectName">UnitedLoL</h3>
-    <div class="leftCont">
-      <img class="projectImg left" src="\Images\unitedLol.png" alt="" />
-      <img class="projectImg" src="\Images\unitedLol2.png" />
-    </div>
-
-    <div class="rightCont">
-      <h3 class="descTitle right">Technologies Used</h3>
-      <div class="techBox">
-        <p class="tech">HTML & CSS</p>
-        <p class="tech">JavaScript</p>
-        <p class="tech">Node.js</p>
-        <p class="tech">Socket.io</p>
-      </div>
-      <br />
-      <h3 class="descTitle right">Overview</h3>
-      <p class="desc right">UnitedLoL is a website for League Of Legends players that are looking for people to play with. It matches people that are looking for a group with people that already have a group (atleast 2 players). It has a simple queue system that automatically matches people to a group in time order. If you were the first one looking for group, you will be the first one to get matched.
-        <br/><br/>
-        The app uses web sockets, socket.io as a framework. Sockets in this case reduces server-load and makes the user experience smoother and faster. You instantly get notified when you get matched, if it used Ajax calls there would be bigger delay. The backend is coded with Node.js and socket.io.
-        <br/><br/>
-        You can find the code from Github <a href="https://github.com/Desentso/UnitedLoL" class="link">https://github.com/Desentso/UnitedLoL</a>
-      </p>
-      <br />
-      <h3 class="descTitle right">Challenges</h3>
-      <p class="desc right">First time working with sockets, so I had to study them a bit. Socket.io helped a lot with the sockets but it was still a new concept and a tool I had to learn.</p>
-    </div>
-  </div> -->
-
   <div class="project">
     <h3 class="projectName">BlackJack</h3>
     <div class="leftCont">
@@ -342,68 +283,6 @@
       <br />
       <h3 class="descTitle right">Challenges</h3>
       <p class="desc right">First time I created a game with Java so getting everything right was challenging. Making the GUI was maybe the most challenging part, also the game flow and displaying all the right information to player.</p>
-    </div>
-  </div>
-
-  <div class="project">
-    <h3 class="projectName">Other Projects</h3>
-    <p class="desc">I have built some other projects too. Mostly with JavaScript and Python. For JavaScript I have mostly used codepen.io service. Here are some highlights from my codepen.io. You can find more from my codepen profile <a href="https://codepen.io/Desentso" class="link">https://codepen.io/Desentso</a></p>
-    <div class="smallProjectsCont">
-
-      <a href="https://codepen.io/Desentso/full/JdvQza/"><div class="smallProject">
-        <h4 class="smallPTitle">Egg Timer</h4>
-        <img src="\Images\eggtimer.png" class="smallImg" />
-      </div></a>
-
-      <a href="https://codepen.io/Desentso/full/mJKzXM/"><div class="smallProject">
-        <h4 class="smallPTitle">Calculator</h4>
-        <img src="\Images\calc.png" class="smallImg" />
-      </div></a>
-
-      <a href="https://codepen.io/Desentso/full/pJVOMQ/"><div class="smallProject">
-        <h4 class="smallPTitle">Wikipedia Searcher</h4>
-        <img src="\Images\wpSearcher.png" class="smallImg" />
-      </div></a>
-
-      <a href="https://codepen.io/Desentso/full/wgwgKQ/"><div class="smallProject">
-        <h4 class="smallPTitle">Firework Animation</h4>
-        <img src="\Images\firework.png" class="smallImg" />
-      </div></a>
-
-      <a href="https://codepen.io/Desentso/full/jWqZPO/"><div class="smallProject">
-        <h4 class="smallPTitle">BlackJack</h4>
-        <img src="\Images\blackjackJS.png" class="smallImg" />
-      </div></a>
-
-      <a href="https://codepen.io/Desentso/full/NbpQOL/"><div class="smallProject">
-        <h4 class="smallPTitle">Ball Bounce Animation</h4>
-        <img src="\Images\ballbounce.png" class="smallImg" />
-      </div></a>
-
-      <a href="https://codepen.io/Desentso/full/PzxENP/"><div class="smallProject">
-        <h4 class="smallPTitle">Grid UI</h4>
-        <img src="\Images\gridui.png" class="smallImg" />
-      </div></a>
-
-
-      <h3 class="projectName">Python Scripts/Bots</h3>
-      <p class="desc">I have built many Python scripts and bots, but mostly for my own use. Here are some that could be useful for public use. </p>
-      <br/><br/>
-
-      <a href="https://github.com/Desentso/TwitterBots">
-        <div class="smallProject">
-          <h4 class="smallPTitle">Twitter Scripts/Bots</h4>
-          <img src="\Images\PythonLogo.png" class="smallImg" />
-        </div>
-      </a>
-
-      <a href="https://github.com/Desentso/WebScrapers">
-        <div class="smallProject">
-          <h4 class="smallPTitle">Web Scrapers</h4>
-          <img src="\Images\PythonLogo.png" class="smallImg" />
-        </div>
-      </a>
-
     </div>
   </div>
   
